html/css/style.css
@font-face
{
	font-family: gill_header;
	src: url('../fonts/gsa_wg-webfont.woff')
}
@font-face
{
	font-family: gill;
	src: url('../fonts/gsa_wg_l-webfont.woff')
}
*{
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
}

/* prevent selection of elements in web view 
*:not(input):not(textarea) {
	-webkit-user-select: none; 
	-webkit-touch-callout: none; 
}
*/
body{
	position: absolute;
	top: 0px;
	right: 0px;
	left: 0px;
	bottom: 0px;
	overflow: hidden;
	margin: 0px;
	font-family: gill;
	font-size: 100%;
}
#error{
	position: absolute;
	bottom: 0px;
	left: 0px;
	right: 0px;
	height: 0px;
	background: #999;
	color: #FF0000;
	opacity: 1;
	z-index: 10;
	margin: 10px 20px;
	text-align: center;
}
#loading{
	position: absolute;
	top: 50%;
	left: 50%;
	width: 50px;
	height: 50px;
	margin-left: -25px;
	margin-top: -25px;
	background: url('../img/ajax-loader.gif') no-repeat center;	
	z-index: 10000;
	opacity: 0;
}
.panel{
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	overflow: hidden;

}
.panel.modal{
	top: 10px;
	bottom: 10px;
	left: 10px;
	right: 10px;	
	z-index: 4;
	max-width: 400px;
	opacity: 0;
	display: none;
	 -webkit-user-select: none; 
	 -webkit-touch-callout: none; 	
	/*transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;
	-webkit-transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;		*/
}
.btn{
	float: left;
	padding-top: 36px;
	border: 1px solid #1f1f1f;
	background: #1f1f1f;
	width: 25%;
	height: 60px;
	display: block;
	color: #fff;
	box-sizing:border-box;
	-webkit-box-sizing:border-box;
	-moz-box-sizing: border-box;
}
.btn_close{
	width: 40px;
	height: 40px;
	position: absolute;
	top: 0px;
	left: 0px;
	padding: 10px 0 0 0;
	text-align: center;
	color: #fff;
	font-size: 13px;
	font-weight: bold;
}
.btn_apply{
	width: 80px;
	height: 40px;
	position: absolute;
	top: 0px;
	right: 0px;
	padding: 10px 0 0 0;
	text-align: center;
	color: #fff;
	font-size: 13px;
	font-weight: bold;
	display: none;
	border-left: 1px solid #fff! important;
}
.panel_header{
	position: absolute;
	top: 0px;
	left: 0px;
	text-align: center;
	width: 100%;
	height: 40px;
	background: #1f1f1f;
	color: #fff;
}
.panel_header h2{
	display: inline-block;
}
.panel_header .btn{
	border: none;
}
/*#filter_panel .panel_header{
	background: #272c2d url('../img/filter.svg') no-repeat 5px 11px;	
	background-size: auto 45%!important;
}
#explain_panel .panel_header{
	background: #272c2d url('../img/faq.svg') no-repeat 5px 11px;	
	background-size: auto 45%!important;
}
#bookmarks_panel .panel_header{
	background: #272c2d url('../img/favorite.svg') no-repeat 5px 11px;	
	background-size: auto 45%!important;	
}*/
.modal_content{
	position: absolute;
	top: 40px;
	bottom: 0px;
	width: 100%;
	overflow: auto;
}
#title_bar{
	position: absolute;
	top: 0px;
	background: #262626;
	height: 60px;
	width: 100%;	
	z-index: 2000;

}
#btn_back{
	position: absolute;
	width: 60px;
	height: 60px;
	top: 0px;
	left: 0px;
	background:url('../img/back_btn.png') no-repeat 20px 12px;
	background-size: auto 55%;
	display: none;
}

.hide{
	display: none;
}
#toggle_favourite{
	width: 60px;
	height: 60px;
	position: absolute;
	top: 0px;
	right: 0px;	
	background:url('../img/topfavorite.svg') no-repeat 5px 15px;	
	background-size: auto 45%;
	display: none;
}
#toggle_favourite.selected{
	background-image:url('../img/favorite.svg');	
}
#info{
	position: absolute;
	bottom: 0px;
	right: 60px;
	left: 60px;
	top: 0px;
	text-align: center;

}

.info_wrapper{
	display: block;
  	vertical-align: middle;
	margin: auto 0px;
	overflow: hidden;
}
#region_name{
	color: #fff;
	font-size: 22px;
	font-family: gill;
	padding-top: 4px;
	white-space: nowrap;
}
#region_name div{
	padding-right: 40px;
}
#filter_breadcrumb_wrapper{
	display: block;
	width: 100%;
	color: #fff;
	font-size: .7em;
	overflow: hidden;
	text-align: center;

}
#filter_breadcrumb{
	height: 15px;
	width: auto;
	opacity: 1!important;
	white-space: nowrap;
}
#filter_breadcrumb span{
	padding-right: 40px;
	
}
#menu_bar{
	position: absolute;
	bottom: 0px;
	height: 60px;
	padding: 0;
	margin: 0;
	width: 100%;
	text-align: center;
	z-index: 10000;
	background: #272c2d;
}
#menu_bar .btn{
	background-size: auto 80%;
	font-size:12px;
	color: #fff;
}
#btn_bookmarks{
	background: #272c2d url('../img/favorite.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
#btn_filter{
	background: #272c2d url('../img/filter.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
#btn_explain{
	background: #272c2d url('../img/faq.svg') no-repeat 50% 8px;	
	background-size: auto 30%!important;
}
#btn_logout{
	background: #272c2d url('../img/logout.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
.btn_close{
	background: url('../img/close_icon.svg') no-repeat 50% 50%;
	background-size: 50% auto;
}
#app_panel{
	display: block;
	z-index: 1;
}
#app_wrapper{
	position: absolute;
	top: 60px;
	bottom: 60px;
	left: 0px;
	right: 0px;
}
#map{
	position: absolute;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	background-size: auto 100%;
	background-attachment: fixed;
}

.svg_wrapper{
	position: absolute;
	width: 100%;
	bottom: 0px;
	height: 100%;
}

path#arc_path, circle#background, path#arc_path_left{
	fill: none;
	stroke-width: 25;       	
}

path#arc_path {

}
path#arc_path_left{

}
circle#background{
	stroke-opacity: .1;
	stroke: #efefef;
}
.nr_label{
	font-size: 1em;
}
.data_wrapper{
	position: absolute;
	width: 50%;
	bottom: 0px;
	left: 50%;
	height: 100%;
	display: block;
}
#holder{
	width: 50%;
	overflow: hidden;
	float: left;
	height: 100%;
	width: 100%;
	overflow: hidden;
	float: left;	
}

#region_data{
	position: absolute;
	text-align: right;
	width: 100%;
	height: 100%;
}
#region_data div{
	padding-right: 15px;
	
	
}
span{
	display: block;
}
#region_lives_improved{
	position: absolute;
	display: block;
	bottom: 50%;
	height: 50%;
	left: 0px;
	right: 0px;
}
/* ... */

